@@ -1,17 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
-
-if (!$ENV{'TEST_AUTHOR'}) {
-  my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
-  plan( skip_all => $msg );
-}
-
-my $home = $ENV{'HOME'};
-if (!$home || !-d "$home/.npg") {
-  my $msg = 'Need access to .npg directory in home directory to read db credentials';
-  plan( skip_all => $msg );
-}
+use t::util;
 
 eval "use Test::Pod::Coverage 1.04";
 plan skip_all => 'Test::Pod::Coverage 1.04 required' if $@;
@@ -20,8 +10,11 @@ my @dirs = ('lib/npg_qc_viewer');
 my @modules = all_modules(@dirs);
 plan tests => scalar @modules;
 
-local $ENV{'dev'} = 'dev'; # Catalyst DBIx models connect to the db inside the constructor.
-diag 'Allow connections to dev databases';
+my $util = t::util->new(fixtures => 0);
+local $ENV{'HOME'} = 't/data';
+$util->test_env_setup();
+local $ENV{CATALYST_CONFIG} = $util->config_path;
+
 foreach my $module (@modules) {
   pod_coverage_ok($module);
 }
